edition = "2023";

package yuhaiin.config;

option go_package = "github.com/Asutorufa/yuhaiin/pkg/protos/config";
option features.(pb.go).api_level = API_OPAQUE;

import "config/log.proto";
import "config/bypass.proto";
import "config/dns.proto";
import "config/inbound.proto";
import "google/protobuf/go_features.proto";

message s3 {
  bool enabled = 1 [ json_name = "enabled" ];
  string access_key = 2 [ json_name = "access_key" ];
  string secret_key = 3 [ json_name = "secret_key" ];
  string bucket = 4 [ json_name = "bucket" ];
  string region = 5 [ json_name = "region" ];
  string endpoint_url = 6 [ json_name = "endpoint_url" ];
  bool use_path_style = 7 [ json_name = "use_path_style" ];
  string storage_class = 8 [ json_name = "storage_class" ];
}

message backup_option {
  string instance_name = 1 [ json_name = "instance_name" ];
  s3 s3 = 2 [ json_name = "s3" ];
  // interval in minutes
  uint64 interval = 3 [ json_name = "interval" ];
  // last backup hash, used to check if the config has changed
  string last_backup_hash = 4 [ json_name = "last_backup_hash" ];
}

message setting {
  reserved 10;
  reserved ipv6_local_addr_prefer_unicast;
  bool ipv6 = 7 [ json_name = "ipv6" ];
  bool use_default_interface = 13 [ json_name = "use_default_interface" ];
  // net_interface, eg: eth0
  string net_interface = 6 [ json_name = "net_interface" ];
  system_proxy system_proxy = 1 [ json_name = "system_proxy" ];
  yuhaiin.bypass.bypass_config bypass = 2 [ json_name = "bypass" ];
  yuhaiin.dns.dns_config dns = 4 [ json_name = "dns" ];
  yuhaiin.inbound.inbound_config server = 5 [ json_name = "server" ];
  yuhaiin.log.logcat logcat = 8 [ json_name = "logcat" ];
  config_version config_version = 9 [ json_name = "config_version" ];
  platform platform = 11 [ json_name = "platform" ];
  advanced_config advanced_config = 12 [ json_name = "advanced_config" ];
  backup_option backup = 14 [ json_name = "backup" ];
}

message advanced_config {
  int32 udp_buffer_size = 1 [ json_name = "udp_buffer_size" ];
  int32 relay_buffer_size = 2 [ json_name = "relay_buffer_size" ];
  int32 udp_ringbuffer_size = 3 [ json_name = "udp_ringbuffer_size" ];
  int32 happyeyeballs_semaphore = 4 [ json_name = "happyeyeballs_semaphore" ];
}

message system_proxy {
  bool http = 2 [ json_name = "http" ];
  bool socks5 = 3 [ json_name = "socks5" ];
}

message info {
  string version = 1 [ json_name = "version" ];
  string commit = 2 [ json_name = "commit" ];
  string build_time = 3 [ json_name = "build_time" ];
  string go_version = 4 [ json_name = "go_version" ];
  string arch = 5 [ json_name = "arch" ];
  string platform = 6 [ json_name = "platform" ];
  string os = 7 [ json_name = "os" ];
  string compiler = 8 [ json_name = "compiler" ];
  repeated string build = 9 [ json_name = "build" ];
}

message config_version { uint64 version = 1 [ json_name = "version" ]; }

message platform { bool android_app = 1 [ json_name = "android_app" ]; }
